--- a/skills.src/validating-production-quality/SKILL.md.erb
+++ b/skills.src/validating-production-quality/SKILL.md.erb
@@ -1,34 +1,36 @@
----
-name: validating-production-quality
-description: Validates that the task is following all production-grade quality checks. What this does is check for regressions, update documentation, update the branch on the latest base, commit any remaining changes, push them on Github and create a Pull Request. Use this when attempting task completion on a task or when the USER asks for validating production qulity gates.
-metadata:
-  dependencies: updating-doc, committing-changes, syncing-branch-with-base, creating-pull-request
----
+<%= frontmatter(
+  description: 'Validates that the task is following all production-grade quality checks. What this does is check for regressions, update documentation, update the branch on the latest base, commit any remaining changes, push them on Github and create a Pull Request. Use this when attempting task completion on a task or when the USER asks for validating production qulity gates.',
+  metadata: {
+    dependencies: 'updating-doc, committing-changes, syncing-branch-with-base, creating-pull-request'
+  }
+) %>
 
-<% define_ordered_todo_list('Validating production quality') do -%>
-  ## Fix any potential regression
+# <%= skill_goal 'Validating production quality' %>
+
+<% define_ordered_todo_list do -%>
+  ### Fix any potential regression
 
   - ALWAYS run all test scenarios.
   - ALWAYS fix all the failures that you see in the tests output.
 
-  ## Update documentation
+  ### Update documentation
 
   - ALWAYS use `skill: updating-doc` to update the project documentation.
 
-  ## Commit all pending modifications
+  ### Commit all pending modifications
 
   - ALWAYS use `skill: committing-changes` to commit all your changes in the current branch.
 
-  ## Sync the branch with its base
+  ### Sync the branch with its base
 
   - ALWAYS use `skill: syncing-branch-with-base` to make sure the current branch is up-to-date with its base.
 
-  ## Remove any merge commit in the current branch
+  ### Remove any merge commit in the current branch
 
   - ALWAYS check that there is no merge commit between the current branch and its base.
   - IF you find any merge commit, THEN ALWAYS remove them by rebasing the branch in a linear way, using `cli: git rebase`, and push again to the Github remote using `--force-with-lease` option.
 
-  ## Create a Pull Request for the current branch
+  ### Create a Pull Request for the current branch
 
   - ALWAYS check on the corresponding GitHub project if there is already a Pull Request created for the current branch.
   - IF there isn't any Pull Request for the current branch, THEN ALWAYS use `skill: creating-pull-request` to create one.
