--- a/skills.src/updating-doc/SKILL.md.erb
+++ b/skills.src/updating-doc/SKILL.md.erb
@@ -1,6 +1,4 @@
-<%= frontmatter(
-  description: 'Update the documentation of the project. What this does is update the README file of the project, its CLI usage and its Table of Content. Use this when a new development has been completed or when the USER is asking for documentation or README to be updated.'
-) %>
+<%= frontmatter(description: 'Update the documentation of the project. What this does is update the README file of the project, its CLI usage and its Table of Content. Use this when a new development has been completed or when the USER is asking for documentation or README to be updated.') %>
 
 # <%= skill_goal 'Updating documentation' %>
 
@@ -10,12 +8,138 @@
   - ALWAYS read the existing README content and think about which parts of it should be updated with the task you just implemented.
   - ALWAYS adapt the content to what is relevant for the task you implemented.
 
+  For example, if README.md has such a section:
+  ```markdown
+  ## Main features
+
+  This executable processes input data files (*.csv) to output statistics.
+  ```
+  and you just implemented a feature adding a timeout feature,
+  then you should update this README section like this:
+  ```markdown
+  ## Main features
+
+  This executable processes input data files (*.csv) to output statistics.
+
+  ### Timeout
+
+  If processing a file takes more than a given number of seconds, then processing stops and an error is returned (timeout behaviour).
+  ```
+
   ### Update the README CLI usage section
 
   - ALWAYS check if the real CLI options are documented correctly in the Usage section of the README file.
+
+  For example, if README.md has such a section:
+  ```markdown
+  ## CLI options
+
+  * `--process FILE`: Specify the file to process
+  ```
+  and you just implemented a feature adding a CLI timeout option,
+  then you should update this README section like this:
+  ```markdown
+  ## CLI options
+
+  * `--process FILE`: Specify the file to process
+  * `--timeout SECS`: Specify the number of seconds before processing times out (default: 60)
+  ```
 
   ### Update the README table of content
 
   - Devise the hierarchical list of all Markdown headers that are in the README file, of all levels. Don't forget about headers that you may have added in previous steps.
   - ALWAYS make sure that the section "Table of Contents" of the README file is listing exactly all the headers as local links to their section, and indented in accordance with their hierarchical level in the file.
+
+  For example, if README.md has such a section:
+  ```markdown
+  ## Table of Content
+
+  - [Main features](#main_features)
+  - [CLI options](#cli_options)
+  - [Testing](#testing)
+  - [License](#license)
+  ```
+  and you just add a sub-section describing the timeout feature,
+  then you should update this README section like this:
+  ```markdown
+  ## Table of Content
+
+  - [Main features](#main_features)
+    - [Timeout](#timeout)
+  - [CLI options](#cli_options)
+  - [Testing](#testing)
+  - [License](#license)
+  ```
 <% end -%>
+
+## When to use it
+
+- You MUST use it every time the USER asks you to update documentation.
+- You MUST use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- You can use it every time you think documentation should be updated after implementing some changes in the code or tests.
+
+## Usage and code examples
+
+### Updating various sections of README.md when implementing a timeout feature
+
+If README.md has this content before running this skill:
+```markdown
+# Data processing
+
+## Table of Content
+
+- [Main features](#main_features)
+- [CLI options](#cli_options)
+- [Testing](#testing)
+- [License](#license)
+
+## Main features
+
+This executable processes input data files (*.csv) to output statistics.
+
+## CLI options
+
+* `--process FILE`: Specify the file to process
+
+## Testing
+
+Run `rspec`.
+
+## License
+
+* BSD.
+```
+Then README.md should have this kind of content after running this skill:
+Before:
+```markdown
+# Data processing
+
+## Table of Content
+
+- [Main features](#main_features)
+  - [Timeout](#timeout)
+- [CLI options](#cli_options)
+- [Testing](#testing)
+- [License](#license)
+
+## Main features
+
+This executable processes input data files (*.csv) to output statistics.
+
+### Timeout
+
+If processing a file takes more than a given number of seconds, then processing stops and an error is returned (timeout behaviour).
+
+## CLI options
+
+* `--process FILE`: Specify the file to process
+* `--timeout SECS`: Specify the number of seconds before processing times out (default: 60)
+
+## Testing
+
+Run `rspec`.
+
+## License
+
+* BSD.
+```
