--- a/skills.src/syncing-branch-with-base/SKILL.md.erb
+++ b/skills.src/syncing-branch-with-base/SKILL.md.erb
@@ -1,6 +1,4 @@
-<%= frontmatter(
-  description: 'Syncs the current branch with its base. What this does is check the remote base branch, rebase the current one on the updated base and push it back to the remote. Use this when the base branch of the current branch may have diverged and you want to be sure that the current branch gets all latest changes of its base. This Skill is the canonical way to keep a branch up-to-date with its base. It must be used instead of merging the base branch, and always performs a rebase.'
-) %>
+<%= frontmatter(description: 'Syncs the current branch with its base. What this does is check the remote base branch, rebase the current one on the updated base and push it back to the remote. Use this when the base branch of the current branch may have diverged and you want to be sure that the current branch gets all latest changes of its base. This Skill is the canonical way to keep a branch up-to-date with its base. It must be used instead of merging the base branch, and always performs a rebase.') %>
 
 # <%= skill_goal 'Syncing the current branch with its base' %>
 
@@ -14,6 +12,11 @@
 
   - ALWAYS use `cli: git fetch --all` to retrieve the GitHub remote's base branch.
 
+  Example:
+  ```bash
+  git fetch --all
+  ```
+
   ### Rebase the branch
 
   - ALWAYS use `cli: git rebase github/{base_branch}` to bring your branch on top of its base as on the GitHub remote.
@@ -21,8 +24,60 @@
   - ALWAYS fix any conflict you see during the rebase, and continue the rebase using `cli: git rebase --continue` until all your commits have been rebased properly.
   - If you don't know how to solve a conflict, ALWAYS use `agent: ask_followup_question` to ask the USER to help you solve the git conflict.
 
+  Example:
+  ```bash
+  git rebase github/main
+  # Fix potential conflicts in files
+  git rebase --continue
+  # Use agent tool ask_followup_question about new potential conflicts that you don't understand how to solve
+  git rebase --continue
+  ```
+
   ### Push the rebased branch
 
   - ALWAYS push your rebased branch to GitHub using the `--force-with-lease` option: `cli: git push github --force-with-lease`.
   - If the push with `--force-with-lease` option failed, ALWAYS use `agent: ask_followup_question` to ask the USER to help you solve the issue. It could be that another user contributed to the branch.
+
+  Example:
+  ```bash
+  git push github --force-with-lease
+  ```
 <% end -%>
+
+## When to use it
+
+- You MUST use it every time the USER asks you to sync the branch with its base.
+- You MUST use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- You can use it every time you realize the base branch has divereged and you want to get the current branch up-to-date with its base.
+
+## Usage and code examples
+
+Those examples are given for a Linux environment. Adapt them if you are running in a Windows environment.
+
+### Syncing the branch on main when there are not conflicts
+
+```bash
+git fetch --all
+git rebase github/main
+git push github --force-with-lease
+```
+
+### Syncing the branch on main when there are some conflicts on *.rb files that you can solve by yourself
+
+```bash
+git fetch --all
+git rebase github/main
+# Solve conflicts on *.rb files
+git rebase --continue
+git push github --force-with-lease
+```
+
+### Syncing the branch on main when there are some conflicts on *.rb files that you can't solve by yourself
+
+```bash
+git fetch --all
+git rebase github/main
+# Use agent tool ask_followup_question about new potential conflicts that you don't understand on *.rb
+git rebase --continue
+git push github --force-with-lease
+```
